sdk/odin/sdk/python/include/output/abstract.odin


	/* Returns the bitwise exclusive or of o1 by o2 on success, or NULL on failure.
	
	This is the equivalent of the Python expression: o1 ^ o2. */
	PyNumber_Xor :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of bitwise or on o1 and o2 on success, or NULL on
	failure.
	
	This is the equivalent of the Python expression: o1 | o2. */
	PyNumber_Or :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns 1 if obj is an index integer (has the nb_index slot of the
	tp_as_number structure filled in), and 0 otherwise. */
	PyIndex_Check :: proc() -> i32 ---

	/* Returns the object 'o' converted to a Python int, or NULL with an exception
	raised on failure. */
	PyNumber_Index :: proc(o: ^PyObject) -> ^PyObject ---

	/* Returns the object 'o' converted to Py_ssize_t by going through
	PyNumber_Index() first.
	
	If an overflow error occurs while converting the int to Py_ssize_t, then the
	second argument 'exc' is the error-type to return.  If it is NULL, then the
	overflow error is cleared and the value is clipped. */
	PyNumber_AsSsize_t :: proc(o: ^PyObject, exc: ^PyObject) -> Py_ssize_t ---

	/* Returns the object 'o' converted to an integer object on success, or NULL
	on failure.
	
	This is the equivalent of the Python expression: int(o). */
	PyNumber_Long :: proc(o: ^PyObject) -> ^PyObject ---

	/* Returns the object 'o' converted to a float object on success, or NULL
	on failure.
	
	This is the equivalent of the Python expression: float(o). */
	PyNumber_Float :: proc(o: ^PyObject) -> ^PyObject ---

	/* Returns the result of adding o2 to o1, possibly in-place, or NULL
	on failure.
	
	This is the equivalent of the Python expression: o1 += o2. */
	PyNumber_InPlaceAdd :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of subtracting o2 from o1, possibly in-place or
	NULL on failure.
	
	This is the equivalent of the Python expression: o1 -= o2. */
	PyNumber_InPlaceSubtract :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of multiplying o1 by o2, possibly in-place, or NULL on
	failure.
	
	This is the equivalent of the Python expression: o1 *= o2. */
	PyNumber_InPlaceMultiply :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* This is the equivalent of the Python expression: o1 @= o2. */
	PyNumber_InPlaceMatrixMultiply :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of dividing o1 by o2 giving an integral result, possibly
	in-place, or NULL on failure.
	
	This is the equivalent of the Python expression: o1 /= o2. */
	PyNumber_InPlaceFloorDivide :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of dividing o1 by o2 giving a float result, possibly
	in-place, or null on failure.
	
	This is the equivalent of the Python expression: o1 /= o2. */
	PyNumber_InPlaceTrueDivide :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the remainder of dividing o1 by o2, possibly in-place, or NULL on
	failure.
	
	This is the equivalent of the Python expression: o1 %= o2. */
	PyNumber_InPlaceRemainder :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of raising o1 to the power of o2, possibly in-place,
	or NULL on failure.
	
	This is the equivalent of the Python expression: o1 **= o2,
	or o1 = pow(o1, o2, o3) if o3 is present. */
	PyNumber_InPlacePower :: proc(o1: ^PyObject, o2: ^PyObject, o3: ^PyObject) -> ^PyObject ---

	/* Returns the result of left shifting o1 by o2, possibly in-place, or NULL
	on failure.
	
	This is the equivalent of the Python expression: o1 <<= o2. */
	PyNumber_InPlaceLshift :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of right shifting o1 by o2, possibly in-place or NULL
	on failure.
	
	This is the equivalent of the Python expression: o1 >>= o2. */
	PyNumber_InPlaceRshift :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of bitwise and of o1 and o2, possibly in-place, or NULL
	on failure.
	
	This is the equivalent of the Python expression: o1 &= o2. */
	PyNumber_InPlaceAnd :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the bitwise exclusive or of o1 by o2, possibly in-place, or NULL
	on failure.
	
	This is the equivalent of the Python expression: o1 ^= o2. */
	PyNumber_InPlaceXor :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the result of bitwise or of o1 and o2, possibly in-place,
	or NULL on failure.
	
	This is the equivalent of the Python expression: o1 |= o2. */
	PyNumber_InPlaceOr :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Returns the integer n converted to a string with a base, with a base
	marker of 0b, 0o or 0x prefixed if applicable.
	
	If n is not an int object, it is converted with PyNumber_Index first. */
	PyNumber_ToBase :: proc(n: ^PyObject, base: i32) -> ^PyObject ---

	/* Return 1 if the object provides sequence protocol, and zero
	otherwise.
	
	This function always succeeds. */
	PySequence_Check :: proc(o: ^PyObject) -> i32 ---

	/* Return the size of sequence object o, or -1 on failure. */
	PySequence_Size   :: proc(o: ^PyObject) -> Py_ssize_t ---
	PySequence_Length :: proc(o: ^PyObject) -> Py_ssize_t ---

	/* Return the concatenation of o1 and o2 on success, and NULL on failure.
	
	This is the equivalent of the Python expression: o1 + o2. */
	PySequence_Concat :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Return the result of repeating sequence object 'o' 'count' times,
	or NULL on failure.
	
	This is the equivalent of the Python expression: o * count. */
	PySequence_Repeat :: proc(o: ^PyObject, count: Py_ssize_t) -> ^PyObject ---

	/* Return the ith element of o, or NULL on failure.
	
	This is the equivalent of the Python expression: o[i]. */
	PySequence_GetItem :: proc(o: ^PyObject, i: Py_ssize_t) -> ^PyObject ---

	/* Return the slice of sequence object o between i1 and i2, or NULL on failure.
	
	This is the equivalent of the Python expression: o[i1:i2]. */
	PySequence_GetSlice :: proc(o: ^PyObject, i1: Py_ssize_t, i2: Py_ssize_t) -> ^PyObject ---

	/* Assign object 'v' to the ith element of the sequence 'o'. Raise an exception
	and return -1 on failure; return 0 on success.
	
	This is the equivalent of the Python statement o[i] = v. */
	PySequence_SetItem :: proc(o: ^PyObject, i: Py_ssize_t, v: ^PyObject) -> i32 ---

	/* Delete the 'i'-th element of the sequence 'v'. Returns -1 on failure.
	
	This is the equivalent of the Python statement: del o[i]. */
	PySequence_DelItem :: proc(o: ^PyObject, i: Py_ssize_t) -> i32 ---

	/* Assign the sequence object 'v' to the slice in sequence object 'o',
	from 'i1' to 'i2'. Returns -1 on failure.
	
	This is the equivalent of the Python statement: o[i1:i2] = v. */
	PySequence_SetSlice :: proc(o: ^PyObject, i1: Py_ssize_t, i2: Py_ssize_t, v: ^PyObject) -> i32 ---

	/* Delete the slice in sequence object 'o' from 'i1' to 'i2'.
	Returns -1 on failure.
	
	This is the equivalent of the Python statement: del o[i1:i2]. */
	PySequence_DelSlice :: proc(o: ^PyObject, i1: Py_ssize_t, i2: Py_ssize_t) -> i32 ---

	/* Returns the sequence 'o' as a tuple on success, and NULL on failure.
	
	This is equivalent to the Python expression: tuple(o). */
	PySequence_Tuple :: proc(o: ^PyObject) -> ^PyObject ---

	/* Returns the sequence 'o' as a list on success, and NULL on failure.
	This is equivalent to the Python expression: list(o) */
	PySequence_List :: proc(o: ^PyObject) -> ^PyObject ---

	/* Return the sequence 'o' as a list, unless it's already a tuple or list.
	
	Use PySequence_Fast_GET_ITEM to access the members of this list, and
	PySequence_Fast_GET_SIZE to get its length.
	
	Returns NULL on failure.  If the object does not support iteration, raises a
	TypeError exception with 'm' as the message text. */
	PySequence_Fast :: proc(o: ^PyObject, m: cstring) -> ^PyObject ---

	/* Return the number of occurrences on value on 'o', that is, return
	the number of keys for which o[key] == value.
	
	On failure, return -1.  This is equivalent to the Python expression:
	o.count(value). */
	PySequence_Count :: proc(o: ^PyObject, value: ^PyObject) -> Py_ssize_t ---

	/* Return 1 if 'ob' is in the sequence 'seq'; 0 if 'ob' is not in the sequence
	'seq'; -1 on error.
	
	Use __contains__ if possible, else _PySequence_IterSearch(). */
	PySequence_Contains :: proc(seq: ^PyObject, ob: ^PyObject) -> i32 ---

	/* Determine if the sequence 'o' contains 'value'. If an item in 'o' is equal
	to 'value', return 1, otherwise return 0. On error, return -1.
	
	This is equivalent to the Python expression: value in o. */
	PySequence_In :: proc(o: ^PyObject, value: ^PyObject) -> i32 ---

	/* Return the first index for which o[i] == value.
	On error, return -1.
	
	This is equivalent to the Python expression: o.index(value). */
	PySequence_Index :: proc(o: ^PyObject, value: ^PyObject) -> Py_ssize_t ---

	/* Append sequence 'o2' to sequence 'o1', in-place when possible. Return the
	resulting object, which could be 'o1', or NULL on failure.
	
	This is the equivalent of the Python expression: o1 += o2. */
	PySequence_InPlaceConcat :: proc(o1: ^PyObject, o2: ^PyObject) -> ^PyObject ---

	/* Repeat sequence 'o' by 'count', in-place when possible. Return the resulting
	object, which could be 'o', or NULL on failure.
	
	This is the equivalent of the Python expression: o1 *= count.  */
	PySequence_InPlaceRepeat :: proc(o: ^PyObject, count: Py_ssize_t) -> ^PyObject ---

	/* Return 1 if the object provides mapping protocol, and 0 otherwise.
	
	This function always succeeds. */
	PyMapping_Check :: proc(o: ^PyObject) -> i32 ---

	/* Returns the number of keys in mapping object 'o' on success, and -1 on
	failure. This is equivalent to the Python expression: len(o). */
	PyMapping_Size   :: proc(o: ^PyObject) -> Py_ssize_t ---
	PyMapping_Length :: proc(o: ^PyObject) -> Py_ssize_t ---

	/* On success, return 1 if the mapping object 'o' has the key 'key',
	and 0 otherwise.
	
	This is equivalent to the Python expression: key in o.
	
	This function always succeeds. */
	PyMapping_HasKeyString :: proc(o: ^PyObject, key: cstring) -> i32 ---

	/* Return 1 if the mapping object has the key 'key', and 0 otherwise.
	
	This is equivalent to the Python expression: key in o.
	
	This function always succeeds. */
	PyMapping_HasKey :: proc(o: ^PyObject, key: ^PyObject) -> i32 ---

	/* On success, return a list or tuple of the keys in mapping object 'o'.
	On failure, return NULL. */
	PyMapping_Keys :: proc(o: ^PyObject) -> ^PyObject ---

	/* On success, return a list or tuple of the values in mapping object 'o'.
	On failure, return NULL. */
	PyMapping_Values :: proc(o: ^PyObject) -> ^PyObject ---

	/* On success, return a list or tuple of the items in mapping object 'o',
	where each item is a tuple containing a key-value pair. On failure, return
	NULL. */
	PyMapping_Items :: proc(o: ^PyObject) -> ^PyObject ---

	/* Return element of 'o' corresponding to the string 'key' or NULL on failure.
	
	This is the equivalent of the Python expression: o[key]. */
	PyMapping_GetItemString :: proc(o: ^PyObject, key: cstring) -> ^PyObject ---

	/* Map the string 'key' to the value 'v' in the mapping 'o'.
	Returns -1 on failure.
	
	This is the equivalent of the Python statement: o[key]=v. */
	PyMapping_SetItemString :: proc(o: ^PyObject, key: cstring, value: ^PyObject) -> i32 ---

	/* isinstance(object, typeorclass) */
	PyObject_IsInstance :: proc(object: ^PyObject, typeorclass: ^PyObject) -> i32 ---

	/* issubclass(object, typeorclass) */
	PyObject_IsSubclass :: proc(object: ^PyObject, typeorclass: ^PyObject) -> i32 ---
}
